image upload UI now sets last flow name into localStorage. fixed overflow-y enabling only.

--- a/web/src/gf_core/css/gf_image_upload.css
+++ b/web/src/gf_core/css/gf_image_upload.css
@@ -21,6 +21,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 10;
 }
 #upload_image_dialog #background {
     width: 100%;
